--- a/mapSearch/WebContent/css/theme.css
+++ b/mapSearch/WebContent/css/theme.css
@@ -4601,14 +4601,14 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
   color: #bbbbbb;
-  /*background-color: #f2c500;*/
+  /* background-color: #f2c500; */
 }
 /* home 화면 노란색 박스 */
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
   color: #bbbbbb;
-  /*background-color: #f2c500;*/
+  /* background-color: #f2c500; */
 }
 .navbar-inverse .navbar-nav > .disabled > a,
 .navbar-inverse .navbar-nav > .disabled > a:hover,
@@ -6773,15 +6773,15 @@ h2 {
     font-size: 20px;
   }
   h2{
-    font-size: 1.05em
+    font-size: 1.5rem
   }
 }
 @media all and (min-width: 768px) and (max-width: 991px) { /*미디어에 따른 body 글씨 크기*/
   h1{
     font-size: 30px
   }
-  h2{
-    font-size: 1.45em
+  .text-img{
+    font-size: 2rem
   }
 }
 
